syntax = "proto3";

package example;

option go_package = "./example";

message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3;
}

message SearchResponse {
  repeated Result result = 1;
}

message SearchError {
  string field = 1;
  int32 error_count = 2;
}

message Result {
  string url = 1;
  string title = 2;
  string snippets = 3;
  int32 some_snaked_name = 4;
}

service SearchService {
  rpc Search (SearchRequest) returns (SearchResponse);
  rpc SearchAlt (SearchRequest) returns (SearchResponse);
  rpc SearchReturnError (SearchRequest) returns (SearchResponse);
  rpc SearchValidateError (SearchRequest) returns (SearchResponse);
  rpc SearchReturnNil (SearchRequest) returns (SearchResponse);
  rpc SearchWithUnexpectedError (SearchRequest) returns (SearchResponse);
}

message AccountInfo {
  string name = 1;
}

message GetAccountInfoParams {
  string id = 1;
}

message LoginParams {
  string username = 1;
  string password = 2;
}

message LoginResult {
  string status = 1;
}

service AccountService {
  rpc GetAccountInfo (GetAccountInfoParams) returns (AccountInfo);
}

service AuthService {
  rpc Login (LoginParams) returns (LoginResult);
}
